--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <!--Здесь будет карта сайта-->
       </section>
     </main>
-    <footer class="page-footer main-footer">
+    <footer class="main-footer">
       <section class="footer-social">
         <h2>Социальные сети</h2>
         <ul>
