--- a/index.html
+++ b/index.html
@@ -9,30 +9,34 @@
   <body class="page-body">
     <header class="main-header">
       <nav class="main-navigation">
-        <img src="img/logo.svg" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
-        <ul class="main-menu">
-          <li><a href="#">Каталог</a>
-            <ul class="sub-menu">
-              <li><a href="#">Новинки</a></li>
-              <li><a href="#">Сливочное</a></li>
-              <li><a href="#">Щербеты</a></li>
-              <li><a href="#">Фруктовый лед</a></li>
-              <li><a href="#">Мелорин</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Доставка и оплата</a></li>
-          <li><a href="#">О компании</a></li>
-        </ul>
-        <div class="main-header-buttons">
-          <a href="#">Поиск</a>
-          <a href="#">Вход</a>
-          <a href="#">Пусто</a>
+        <div class="main-navigation-wrapper">
+          <img src="img/logo.svg" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
+          <ul class="main-menu">
+            <li><a href="#">Каталог</a>
+              <ul class="sub-menu">
+                <li><a href="#">Новинки</a></li>
+                <li><a href="#">Сливочное</a></li>
+                <li><a href="#">Щербеты</a></li>
+                <li><a href="#">Фруктовый лед</a></li>
+                <li><a href="#">Мелорин</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Доставка и оплата</a></li>
+            <li><a href="#">О компании</a></li>
+          </ul>
+          <div class="main-header-buttons">
+            <a href="#">Поиск</a>
+            <a href="#">Вход</a>
+            <a href="#">Пусто</a>
+          </div>
         </div>
       </nav>
-      <div class="header-contacts">
-        <p class="header-item">c 10 до 20, ежедневно</p>
-        <a class="header-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
-      </div>
+        <div class="header-contacts-wrapper">
+          <div class="header-contacts">
+            <p class="header-item">c 10 до 20, ежедневно</p>
+            <a class="header-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
+          </div>
+        </div>
     </header>
     <main class="container">
       <div class="best-offer">
