--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
-    <header class="main-header">
+    <header class="main-header container">
       <nav class="main-navigation">
         <div class="main-navigation-wrapper">
           <img src="img/logo.svg" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
@@ -38,112 +38,121 @@
           </div>
         </div>
     </header>
-    <main class="container">
-      <div class="best-offer">
-        <h1 class="main-headline">Магазин мороженого Gllacy Shop</h1>
-        <div class="ice-cream">
-          <h2>Крем-брюле и пломбир с малиновым джемом</h2>
-          <img src="img/pair-icecream01.png" width="647" height="584" alt="Крем-брюле и пломбир с малиновым джемом">
+    <main>
+      <div class="container">
+        <div class="best-offer">
+          <h1 class="main-headline">Магазин мороженого Gllacy Shop</h1>
+          <div class="ice-cream">
+            <h2>Крем-брюле и пломбир с малиновым джемом</h2>
+            <img src="img/pair-icecream01.png" width="647" height="584" alt="Крем-брюле и пломбир с малиновым джемом">
+          </div>
+          <div class="ice-cream">
+            <h2>Шоколадный пломбир и лимонный сорбет</h2>
+            <img src="img/pair-icecream02.png" width="644" height="582" alt="Шоколадный пломбир и лимонный сорбет">
+          </div>
+          <div class="ice-cream">
+            <h2>Пломбир с помадкой и клубничный щербет</h2>
+            <img src="img/pair-icecream03.png" width="639" height="582" alt="Пломбир с помадкой и клубничный щербет">
+          </div>
+          <a class="button best-offer-button" href="#">Давайте оба!</a>
         </div>
-        <div class="ice-cream">
-          <h2>Шоколадный пломбир и лимонный сорбет</h2>
-          <img src="img/pair-icecream02.png" width="644" height="582" alt="Шоколадный пломбир и лимонный сорбет">
+        <div class="product-free-container">
+          <article class="raspberry-free">
+            <h3>Малинка даром!</h3>
+            <p>При покупке любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a class="button button-raspberry" href="#">Хочу варенье!</a>
+          </article>
+          <article class="chocolate-free">
+            <h3>Шоколадки даром!</h3>
+            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+            <a class="button" href="#">Хочу шоколадки!</a>
+          </article>
         </div>
-        <div class="ice-cream">
-          <h2>Пломбир с помадкой и клубничный щербет</h2>
-          <img src="img/pair-icecream03.png" width="639" height="582" alt="Пломбир с помадкой и клубничный щербет">
+        <section>
+          <h2>Популярные вкусы</h2>
+          <ul class="goods">
+            <li>
+              <section class="goods-item">
+                <img src="img/product01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                <p class="goods-item-price">310 р/кг</p>
+                <h3 class="goods-item-name">
+                  <a>Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                </h3>
+                <button class="button" type="button">Быстрый просмотр</button>
+              </section>
+            </li>
+            <li>
+              <section class="goods-item">
+                <img src="img/product02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                <p class="goods-item-price">380 р/кг</p>
+                <h3 class="goods-item-name">
+                  <a>Сливочно-кофейное с кусочками шоколада</a>
+                </h3>
+                <button class="button" type="button">Быстрый просмотр</button>
+              </section>
+            </li>
+            <li>
+              <section class="goods-item">
+                <img src="img/product03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <p class="goods-item-price">355 р/кг</p>
+                <h3 class="goods-item-name">
+                  <a>Сливочно-клубничное с присыпкой из белого шоколада</a>
+                </h3>
+                <button class="button" type="button">Быстрый просмотр</button>
+              </section>
+            </li>
+            <li>
+              <section class="goods-item">
+                <img src="img/product04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                <p class="goods-item-price">415 р/кг</p>
+                <h3 class="goods-item-name">
+                  <a>Сливочное крем-брюле с карамельной подливкой</a>
+                </h3>
+                <button class="button" type="button">Быстрый просмотр</button>
+              </section>
+            </li>
+          </ul>
+        </section>
+        <div class="features-wrapper">
+          <section class="features">
+            <h2>Магазин Глэйси - это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+            <ul class="features-list">
+              <li class="feature-item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+              <li class="feature-item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+              <li class="feature-item">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+              <li class="feature-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+            </ul>
+          </section>
         </div>
-        <a class="button best-offer-button" href="#">Давайте оба!</a>
+        <div class="news-mailing-wrapper">
+          <article class="news">
+            <p>Новое в нашем блоге</p>
+            <h2><a href="#">10 способов сервировки фруктовых щербетов к столу</a></h2>
+          </article>
+          <section class="mailing">
+            <h2>Подписаться на рассылку</h2>
+            <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+            <button class="button">Отправить</button>
+          </section>
+        </div>
       </div>
-      <article class="raspberry-free">
-        <h3>Малинка даром!</h3>
-        <p>При покупке любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-        <a class="button button-raspberry" href="#">Хочу варенье!</a>
-      </article>
-      <article class="chocolate-free">
-        <h3>Шоколадки даром!</h3>
-        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-        <a class="button" href="#">Хочу шоколадки!</a>
-      </article>
-      <section>
-        <h2>Популярные вкусы</h2>
-        <ul class="goods">
-          <li>
-            <section class="goods-item">
-              <img src="img/product01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-              <p class="goods-item-price">310 р/кг</p>
-              <h3 class="goods-item-name">
-                <a>Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-              </h3>
-              <button class="button" type="button">Быстрый просмотр</button>
-            </section>
-          </li>
-          <li>
-            <section class="goods-item">
-              <img src="img/product02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-              <p class="goods-item-price">380 р/кг</p>
-              <h3 class="goods-item-name">
-                <a>Сливочно-кофейное с кусочками шоколада</a>
-              </h3>
-              <button class="button" type="button">Быстрый просмотр</button>
-            </section>
-          </li>
-          <li>
-            <section class="goods-item">
-              <img src="img/product03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-              <p class="goods-item-price">355 р/кг</p>
-              <h3 class="goods-item-name">
-                <a>Сливочно-клубничное с присыпкой из белого шоколада</a>
-              </h3>
-              <button class="button" type="button">Быстрый просмотр</button>
-            </section>
-          </li>
-          <li>
-            <section class="goods-item">
-              <img src="img/product04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-              <p class="goods-item-price">415 р/кг</p>
-              <h3 class="goods-item-name">
-                <a>Сливочное крем-брюле с карамельной подливкой</a>
-              </h3>
-              <button class="button" type="button">Быстрый просмотр</button>
-            </section>
-          </li>
-        </ul>
-      </section>
-      <section class="features">
-        <h2>Магазин Глэйси - это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-        <ul class="features-list">
-          <li class="feature-item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-          <li class="feature-item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
-          <li class="feature-item">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
-          <li class="feature-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
-        </ul>
-      </section>
-      <article class="news">
-        <p>Новое в нашем блоге</p>
-        <h2><a href="#">10 способов сервировки фруктовых щербетов к столу</a></h2>
-      </article>
-      <section class="mailing">
-        <h2>Подписаться на рассылку</h2>
-        <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-        <button class="button">Отправить</button>
-      </section>
-      <section>
-        <h2>Мы на карте</h2>
-        <img src="https://via.placeholder.com/1200x430" alt="Карта сайта">
-        <aside class="contacts">
-          <h3>Как нас найти</h3>
-          <p class="address-name">Адрес главного офиса и офлайн-магазина:</p>
-          <p class="address"><b>ул. Большая Конюшенная, 19/8, Санкт-Петербург</b></p>
-          <p class="tel-name">Для заказов по телефону:</p>
-          <a class="contacts-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
-          <p class="opening-hours">(c 10 до 20 ежедневно)</p>
-          <button class="button" type="button">Форма обратной связи</button>
+      <section class="map">
+        <div class="map-position">
+          <img src="https://via.placeholder.com/2200x430" width="2200" height="430" alt="Карта сайта">
+          <aside class="contacts">
+            <h2>Мы на карте</h2>
+            <h3>Как нас найти</h3>
+            <p class="address-name">Адрес главного офиса и офлайн-магазина:</p>
+            <p class="address"><b>ул. Большая Конюшенная, 19/8, Санкт-Петербург</b></p>
+            <p class="tel-name">Для заказов по телефону:</p>
+            <a class="contacts-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
+            <p class="opening-hours">(c 10 до 20 ежедневно)</p>
+            <button class="button" type="button">Форма обратной связи</button>
+        </div>
         </aside>
-        <!--Здесь будет карта сайта-->
       </section>
     </main>
-    <footer class="main-footer">
+    <footer class="main-footer container">
       <section class="footer-social">
         <h2>Социальные сети</h2>
         <ul>
@@ -168,8 +177,10 @@
         <a href="#">О производстве</a>
         <a href="#">Экологические стандарты</a>
       </section>
-      <a href="#"><img src="img/logo_htmlacademy.svg" width="108" height="39" alt="HTML Academy"></a>
-      <p class="footer-copyright">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
+      <section class="footer-copyright">
+        <a href="#"><img src="img/logo_htmlacademy.svg" width="108" height="39" alt="HTML Academy"></a>
+        <p class="footer-copyright-link">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
+      </section>
     </footer>
   </body>
 </html>
