--- a/catalog.html
+++ b/catalog.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
-    <header class="main-header">
+    <header class="main-header container">
       <nav class="main-navigation">
+      <div class="main-navigation-wrapper">
         <img src="img/logo.svg" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
         <ul class="main-menu">
           <li><a href="#">Каталог</a>
@@ -28,24 +29,25 @@
           <a href="#">Вход</a>
           <a href="#">Пусто</a>
         </div>
+      </div>
       </nav>
       <div class="header-contacts">
         <p class="header-item">c 10 до 20, ежедневно</p>
         <a class="header-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
       </div>
     </header>
-    <main>
-      <div>
+    <main class="container">
+      <div class="page-catalog-header">
         <ul class="breadcrumbs">
           <li class="crumb"><a href="#">Главная</a></li>
           <li class="crumb"><a href="#">Каталог</a></li>
           <li class="crumb"><a>Сливочное</a></li>
         </ul>
+        <h1 class="main-headline">Сливочное мороженое</h1>
       </div>
-      <h1 class="main-headline">Сливочное мороженое</h1>
       <!--Здесь будет форма для фильтрации-->
       <h2>Каталог сливочного мороженого</h2>
-      <ul class="goods">
+      <ul class="goods goods-catalog">
         <li>
           <section class="goods-item">
             <img src="img/product01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
@@ -177,7 +179,7 @@
         <li class="pagination-arrow pagination-arrow-next"><a href="#">Следующая страница</a></li>
       </ul>
     </main>
-    <footer class="main-footer">
+    <footer class="main-footer container">
       <section class="footer-social">
         <h2>Социальные сети</h2>
         <ul>
@@ -202,8 +204,10 @@
         <a href="#">О производстве</a>
         <a href="#">Экологические стандарты</a>
       </section>
-      <a href="#"><img src="img/logo_htmlacademy.svg" width="108" height="39" alt="HTML Academy"></a>
-      <p>Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
+      <section class="footer-copyright">
+        <a href="#"><img src="img/logo_htmlacademy.svg" width="108" height="39" alt="HTML Academy"></a>
+        <p class="footer-copyright-link">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
+      </section>
     </footer>
   </body>
 </html>
