--- a/index.html
+++ b/index.html
@@ -28,27 +28,30 @@
             <div class="main-header-buttons">
               <div class="search-wrapper">
                 <a class="search header-button" href="#" title="Поиск">
-                  <svg class="search-svg" width="16" height="16" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="search-svg" width="16" height="16" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
                     <path d="M16 14.6652L11.0785 9.73294C11.9827 8.48188 12.3826 6.93501 12.1984 5.40134C12.0141 3.86767 11.2594 2.4601 10.0848 1.45982C8.91022 0.45954 7.40233 -0.0598191 5.86234 0.00548954C4.32234 0.0707982 2.86363 0.715967 1.77757 1.81212C0.691516 2.90827 0.0580813 4.3747 0.0038002 5.91849C-0.050481 7.46228 0.478388 8.96976 1.48476 10.1398C2.49113 11.3098 3.90092 12.0563 5.43251 12.2301C6.96409 12.4039 8.50472 11.9922 9.74663 11.0772L14.6586 16L16 14.6652ZM6.08152 10.3767C5.24079 10.3767 4.41895 10.1268 3.71991 9.65874C3.02087 9.19063 2.47604 8.5253 2.15431 7.74687C1.83258 6.96844 1.7484 6.11188 1.91241 5.28551C2.07643 4.45913 2.48128 3.70006 3.07576 3.10427C3.67024 2.50849 4.42766 2.10276 5.25223 1.93838C6.0768 1.77401 6.93149 1.85837 7.70822 2.1808C8.48495 2.50324 9.14883 3.04927 9.61591 3.74983C10.083 4.4504 10.3323 5.27404 10.3323 6.11661C10.3298 7.24568 9.88115 8.3278 9.08451 9.12618C8.28788 9.92456 7.20813 10.3742 6.08152 10.3767Z" fill="white"/>
                 </svg>
                 </a>
                 <section class="modal modal-search">
                   <form action="https://echo.htmlacademy.ru/courses" method="get">
-                    <input class="form-input modal-search-form" type="text" name="search" placeholder="Крем-брюле">
+                    <label class="visually-hidden" for="search-form">Поиcк</label>
+                    <input class="form-input modal-search-form" type="text" name="search" placeholder="Крем-брюле" id="search-form">
                   </form>
                 </section>
               </div>
               <div class="enter-wrapper">
                 <a class="enter header-button" href="#" title="Вход">
-                  <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
                     <path d="M6.04 14.88L12.96 9.5L6.04 4.13V7.04H0V11.96H6.04V14.88Z" fill="white"/>
                     <path d="M18 0H5C4.46957 0 3.96086 0.210714 3.58579 0.585786C3.21071 0.960859 3 1.46957 3 2V4H5V2H18V17H5V15H3V17C3 17.5304 3.21071 18.0391 3.58579 18.4142C3.96086 18.7893 4.46957 19 5 19H18C18.5304 19 19.0391 18.7893 19.4142 18.4142C19.7893 18.0391 20 17.5304 20 17V2C20 1.46957 19.7893 0.960859 19.4142 0.585786C19.0391 0.210714 18.5304 0 18 0Z" fill="white"/>
                   </svg>Вход
                 </a>
                 <section class="modal modal-enter">
                   <form action="https://echo.htmlacademy.ru/courses" method="post">
-                    <input class="form-input modal-email-form" type="email" name="email" placeholder="email@example.com">
-                    <input class="form-input modal-password-form" type="password" name="password">
+                    <label сlass="visually-hidden" for="email-form">Логин</label>
+                    <input class="form-input modal-email-form" type="email" name="email" placeholder="email@example.com" id="email-form">
+                    <label class="visually-hidden" for="password-form">Пароль</label>
+                    <input class="form-input modal-password-form" type="password" name="password" id="password-form">
                     <div class="links-wrapper">
                       <div class="links">
                         <a class="login-form-forgot" href="#">Забыли пароль?</a>
@@ -195,7 +198,8 @@
                 <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
               </div>
                 <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="get">
-                  <input class="email" type="email" name="emeil" placeholder="email@example.com">
+                  <label class="visually-hidden" for="email">Ваш email</label>
+                  <input class="email" type="email" name="emeil" placeholder="email@example.com" id="email">
                   <button class="button button-mailing" type="submit">Отправить</button>
                 </form>
             </section>
@@ -222,15 +226,15 @@
           <h2 class="visually-hidden">Социальные сети</h2>
           <ul class="footer-social-links">
             <li>
-              <a class="social-button social-fb" href="#" title="Фейсбук">
-                <svg class="facebook" width="33" height="31" viewBox="0 0 33 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <a class="social-button social-fb" href="#" aria-label="Фейсбук">
+                <svg class="facebook" width="33" height="31" viewBox="0 0 33 31" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
                   <path d="M16.028 0.0999756C12.8579 0.0999756 9.7591 0.99144 7.12331 2.66164C4.48753 4.33183 2.43318 6.70575 1.22006 9.48319C0.00694466 12.2606 -0.310463 15.3168 0.30798 18.2653C0.926423 21.2139 2.45294 23.9222 4.69449 26.048C6.93604 28.1738 9.79196 29.6214 12.9011 30.2079C16.0102 30.7944 19.2329 30.4934 22.1616 29.3429C25.0903 28.1925 27.5936 26.2443 29.3548 23.7446C31.1159 21.245 32.056 18.3063 32.056 15.3C32.056 11.2687 30.3673 7.40251 27.3615 4.55195C24.3556 1.7014 20.2789 0.0999756 16.028 0.0999756ZM20.0951 9.07748H17.0297V12.355H20.035V15.623H17.0297V23.85H14.0245V15.623H11.0192V12.355H14.0245V9.07748C13.9693 8.26594 14.254 7.46652 14.8167 6.85286C15.3793 6.2392 16.1746 5.86085 17.0297 5.79998H20.035V9.07748H20.0951Z" fill="white" fill-opacity="0.8"/>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="social-button social-vk" href="#" title="Вконтакте">
-                <svg width="33" height="31" viewBox="0 0 33 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <a class="social-button social-vk" href="#" aria-label="Вконтакте">
+                <svg width="33" height="31" viewBox="0 0 33 31" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
                   <path d="M16.746 13.8655C17.0718 13.8659 17.3946 13.8078 17.6977 13.6945C17.9727 13.5973 18.2007 13.4081 18.3388 13.1625C18.4433 12.9216 18.4944 12.6629 18.489 12.4025C18.485 12.1704 18.4233 11.9426 18.3087 11.7375C18.1799 11.5063 17.9604 11.3323 17.6977 11.253C17.3758 11.1456 17.0371 11.091 16.6959 11.0915H14.6924V13.9415H15.2634C15.8544 13.894 16.3453 13.8845 16.746 13.8655Z" fill="white" fill-opacity="0.8"/>
                   <path d="M18.2286 16.326C17.859 16.2595 17.4825 16.234 17.1066 16.25H14.7125V19.575H17.1667C17.5831 19.5705 17.9947 19.4899 18.3789 19.3375C18.7004 19.2322 18.9731 19.0239 19.1502 18.7485C19.2969 18.4851 19.3726 18.1914 19.3706 17.8935C19.3859 17.5592 19.2952 17.2283 19.1101 16.9435C18.9019 16.6458 18.5898 16.4272 18.2286 16.326Z" fill="white" fill-opacity="0.8"/>
                   <path d="M16.1049 0.0999756C12.9348 0.0999756 9.836 0.99144 7.20022 2.66164C4.56443 4.33183 2.51009 6.70575 1.29697 9.48319C0.083849 12.2606 -0.233558 15.3168 0.384884 18.2653C1.00333 21.2139 2.52984 23.9222 4.7714 26.048C7.01295 28.1738 9.86886 29.6214 12.978 30.2079C16.0871 30.7944 19.3098 30.4934 22.2385 29.3429C25.1673 28.1925 27.6705 26.2443 29.4317 23.7446C31.1928 21.245 32.1329 18.3063 32.1329 15.3C32.1329 11.2687 30.4442 7.40251 27.4384 4.55195C24.4325 1.7014 20.3558 0.0999756 16.1049 0.0999756ZM22.7164 19.6035C22.4536 20.1032 22.069 20.5363 21.5945 20.867C21.0477 21.2578 20.4246 21.542 19.7613 21.703C18.9384 21.8913 18.0932 21.9776 17.2469 21.9595H11.0961V8.64998H16.5557C17.3852 8.63744 18.2149 8.67233 19.04 8.75448C19.5839 8.83429 20.1112 8.99457 20.6027 9.22948C21.1003 9.45382 21.5156 9.81452 21.7948 10.265C22.0607 10.7141 22.1956 11.2224 22.1855 11.7375C22.1974 12.347 22.0083 12.9448 21.6446 13.4475C21.2591 13.9586 20.7272 14.3542 20.1119 14.5875V14.654C20.9405 14.7858 21.7044 15.1614 22.2957 15.7275C22.8461 16.3176 23.1334 17.0874 23.0971 17.8745C23.1215 18.4717 22.9907 19.0654 22.7164 19.6035Z" fill="white" fill-opacity="0.8"/>
@@ -238,8 +242,8 @@
               </a>
             </li>
             <li>
-              <a class="social-button social-inst" href="#" title="Инстаграм">
-                <svg width="33" height="31" viewBox="0 0 33 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <a class="social-button social-inst" href="#" aria-label="Инстаграм">
+                <svg width="33" height="31" viewBox="0 0 33 31" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
                  <g opacity="0.8">
                     <path d="M21.1104 15.3C21.1104 16.5497 20.5869 17.7482 19.6551 18.6319C18.7233 19.5155 17.4595 20.012 16.1417 20.012C14.8239 20.012 13.5601 19.5155 12.6283 18.6319C11.6965 17.7482 11.173 16.5497 11.173 15.3C11.174 14.935 11.2211 14.5714 11.3133 14.217H10.4117V20.715H21.8316V14.217H20.9301C21.0309 14.5708 21.0913 14.9339 21.1104 15.3Z" fill="white"/>
                     <path d="M16.1818 17.827C16.7079 17.8232 17.2211 17.6718 17.6567 17.3919C18.0922 17.112 18.4307 16.716 18.6293 16.2539C18.8279 15.7919 18.8778 15.2844 18.7727 14.7954C18.6677 14.3065 18.4123 13.858 18.0389 13.5065C17.6654 13.155 17.1906 12.9162 16.6743 12.8202C16.1579 12.7243 15.6232 12.7754 15.1375 12.9672C14.6517 13.159 14.2367 13.4829 13.9448 13.898C13.6529 14.3132 13.4971 14.801 13.4971 15.3C13.4984 15.6331 13.5689 15.9627 13.7045 16.2699C13.8402 16.5772 14.0383 16.8561 14.2876 17.0908C14.5369 17.3254 14.8325 17.5112 15.1575 17.6375C15.4825 17.7639 15.8305 17.8282 16.1818 17.827Z" fill="white"/>
@@ -250,8 +254,8 @@
               </a>
             </li>
             <li>
-              <a class="social-button social-tw" href="#" title="Твиттер">
-                <svg width="33" height="31" viewBox="0 0 33 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <a class="social-button social-tw" href="#" aria-label="Твиттер">
+                <svg width="33" height="31" viewBox="0 0 33 31" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
                   <path d="M16.2587 0.0999756C13.0887 0.0999756 9.98981 0.99144 7.35403 2.66164C4.71824 4.33183 2.6639 6.70575 1.45078 9.48319C0.237658 12.2606 -0.0797497 15.3168 0.538693 18.2653C1.15714 21.2139 2.68365 23.9222 4.9252 26.048C7.16676 28.1738 10.0227 29.6214 13.1318 30.2079C16.2409 30.7944 19.4636 30.4934 22.3923 29.3429C25.3211 28.1925 27.8243 26.2443 29.5855 23.7446C31.3466 21.245 32.2867 18.3063 32.2867 15.3C32.2867 11.2687 30.598 7.40251 27.5922 4.55195C24.5864 1.7014 20.5096 0.0999756 16.2587 0.0999756ZM24.2126 12.2695C23.9621 18.4635 20.7465 22.558 13.1933 22.4345H12.7125C12.2617 22.4345 8.15455 22.0165 7.35315 20.7055C9.14517 20.9577 10.9722 20.5719 12.4821 19.6225C11.4303 19.347 9.557 19.1855 9.22642 16.915C9.63992 17.0709 10.0921 17.1105 10.5287 17.029C9.24645 16.25 7.77388 15.585 7.85402 13.5615C8.2727 13.8648 8.79019 14.0194 9.31658 13.9985C8.54523 13.78 7.16282 10.9205 8.31483 9.45748C10.3183 11.158 12.3919 12.7635 16.1285 12.9155C16.3589 10.816 17.3706 9.40048 19.304 8.81148C20.0028 8.58663 20.7573 8.56987 21.4664 8.76346C22.1755 8.95705 22.8052 9.35171 23.2709 9.89448C24.0122 9.67598 24.7235 9.44798 25.4648 9.23898C25.4505 9.55923 25.3592 9.87215 25.1977 10.1537C25.0362 10.4353 24.8089 10.6781 24.5331 10.8635C24.7902 10.892 25.0508 10.8669 25.2966 10.7897C25.5423 10.7126 25.7673 10.5854 25.9556 10.417C25.8382 10.8336 25.6194 11.2182 25.3166 11.54C25.0139 11.8617 24.6357 12.1116 24.2126 12.2695Z" fill="white" fill-opacity="0.8"/>
                 </svg>
               </a>
